--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "axios": "^0.19.2",
     "is-url": "^1.2.4",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
+    "react": "^16.13.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-animate-on-change": "^2.2.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
   },
