added routes and 404 page

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "is-url": "^1.2.4",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
-    "react-addons-css-transition-group": "^15.6.2",
     "react-animate-on-change": "^2.2.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
